# location-ui

./: Makefile.am  README.md  com.nokia.Location.UI.service  configure.ac
debian/: changelog  control  rules
src/: Makefile.am  main.c  main.h
